--- a/app/src/main/res/layout/activity_kitchen.xml
+++ b/app/src/main/res/layout/activity_kitchen.xml
@@ -13,4 +13,13 @@
         android:text="Ashen Bamli"
         tools:layout_editor_absoluteX="82dp"
         tools:layout_editor_absoluteY="82dp" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ashen Bitch"
+        app:layout_constraintEnd_toEndOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 </androidx.constraintlayout.widget.ConstraintLayout>
