--- a/app/src/main/res/layout/activity_foodview.xml
+++ b/app/src/main/res/layout/activity_foodview.xml
@@ -4,7 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".foodview">
+    tools:context=".Activity.foodview">
+
+    <TextView
+        android:id="@+id/food_price2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="80"
+        android:textColor="#009688"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/food_price"
+        app:layout_constraintStart_toEndOf="@+id/food_price"
+        app:layout_constraintTop_toTopOf="@+id/food_price"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -77,7 +91,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
-        android:text="80"
+        android:text="RS."
         android:textColor="#009688"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,16 +133,19 @@
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@mipmap/substract_foreground"
         android:backgroundTint="@color/black"
         android:fontFamily="sans-serif-black"
+        android:onClick="decreaseInteger"
         android:textSize="34sp"
         app:cornerRadius="28dp"
-        android:onClick="decreaseInteger"
+        app:layout_constraintBottom_toBottomOf="@+id/textView18"
         app:layout_constraintEnd_toStartOf="@+id/qty"
-        app:layout_constraintStart_toStartOf="@+id/textView18"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="555dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView18"
+        app:layout_constraintTop_toTopOf="@+id/textView18"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/qty"
@@ -137,7 +154,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="sans-serif-black"
         android:text="1"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/decrease_btn"
         app:layout_constraintStart_toEndOf="@+id/decrease_btn"
         app:layout_constraintTop_toTopOf="@+id/decrease_btn" />
@@ -160,10 +177,12 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-black"
         android:text="Add Quantity"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/food_dis"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="527dp" />
+        app:layout_constraintTop_toBottomOf="@+id/food_dis"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
