--- a/app/src/main/res/layout/activity_kitchen.xml
+++ b/app/src/main/res/layout/activity_kitchen.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.kitchenActivity"
-    android:orientation="horizontal"/>
+    android:orientation="horizontal"
+    tools:context=".Activity.kitchenActivity">
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="346dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="312dp"
+        android:layout_weight="1"
+        android:text="pamkaya"
+        android:textAllCaps="true"
+        android:textSize="75dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
