--- a/app/src/main/res/layout/activity_foodview.xml
+++ b/app/src/main/res/layout/activity_foodview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Activity.foodview">
+    tools:context=".Activity.Activity.ShowDetailActivity">
 
     <TextView
         android:id="@+id/food_price2"
