--- a/app/src/main/res/layout/lst_row_food.xml
+++ b/app/src/main/res/layout/lst_row_food.xml
@@ -27,12 +27,12 @@
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/lblFoodTtl"
+                android:id="@+id/lblFoodID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
-                android:text="Food Item :"
+                android:text="ID:"
                 android:textAllCaps="true"
                 android:textColor="#4CAF50"
                 android:textSize="20sp"
@@ -44,40 +44,66 @@
                 android:id="@+id/lblQtyTtl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="12dp"
-                android:text="Quantity :"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:text="QTY :"
                 android:textAllCaps="true"
                 android:textColor="#4CAF50"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/imgFood"
-                app:layout_constraintTop_toBottomOf="@+id/txtFood" />
+                app:layout_constraintEnd_toStartOf="@+id/txtQty"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtFood"
-                android:layout_width="214dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="243dp"
+                android:layout_height="56dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="5dp"
                 android:text="FoodName"
+                android:textAlignment="textStart"
                 android:textSize="16sp"
                 android:textStyle="italic"
                 app:layout_constraintStart_toEndOf="@+id/imgFood"
-                app:layout_constraintTop_toBottomOf="@+id/lblFoodTtl" />
+                app:layout_constraintTop_toBottomOf="@+id/lalFoodName" />
 
             <TextView
                 android:id="@+id/txtQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="4dp"
                 android:text="#Qty"
                 android:textAllCaps="true"
                 android:textSize="20sp"
                 android:textStyle="bold|italic"
-                app:layout_constraintStart_toEndOf="@+id/lblQtyTtl"
-                app:layout_constraintTop_toBottomOf="@+id/txtFood" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txtFoodID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:text="#ID"
+                android:textSize="20sp"
+                android:textStyle="bold|italic"
+                app:layout_constraintStart_toEndOf="@+id/lblFoodID"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/lalFoodName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="5dp"
+                android:text="Item :"
+                android:textAllCaps="true"
+                android:textColor="#4CAF50"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/imgFood"
+                app:layout_constraintTop_toBottomOf="@+id/lblFoodID" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
