--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:text="Kitchen Login"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="#4CAF50"
+        android:textColor="#009688"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="132dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="#4CAF50"
+        android:backgroundTint="#009688"
         android:text="SIGN IN"
         app:iconTint="#BF1919"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,5 +57,25 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/txtPassword"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="159dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="88dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menus_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
