--- a/app/src/main/res/layout/lst_row_food.xml
+++ b/app/src/main/res/layout/lst_row_food.xml
@@ -24,7 +24,7 @@
                 android:layout_height="125dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@color/common_google_signin_btn_tint" />
 
             <TextView
                 android:id="@+id/lblFoodID"
@@ -56,14 +56,14 @@
 
             <TextView
                 android:id="@+id/txtFood"
-                android:layout_width="243dp"
-                android:layout_height="56dp"
-                android:layout_marginStart="4dp"
+                android:layout_width="223dp"
+                android:layout_height="49dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="5dp"
                 android:text="FoodName"
                 android:textAlignment="textStart"
-                android:textSize="16sp"
-                android:textStyle="italic"
+                android:textSize="28sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imgFood"
                 app:layout_constraintTop_toBottomOf="@+id/lalFoodName" />
 
