--- a/app/src/main/res/layout/lst_row_order_item.xml
+++ b/app/src/main/res/layout/lst_row_order_item.xml
@@ -18,6 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <Button
+                android:id="@+id/btnDone"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:backgroundTint="#009688"
+                android:text="DONE"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lstFood" />
+
             <TextView
                 android:id="@+id/lblOrderId"
                 android:layout_width="wrap_content"
