--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="sexy_green">#4CAF50</color>
     <color name="sexy_green_dark">#009688</color>
+    <color name="intro_orange">#f57542</color>
 </resources>
