--- a/app/src/main/res/layout/activity_show_detail.xml
+++ b/app/src/main/res/layout/activity_show_detail.xml
@@ -40,36 +40,50 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:foregroundGravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/lkrtxt"
-                    android:layout_width="203dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="3dp"
                     android:text="LKR"
                     android:textAlignment="textEnd"
                     android:textColor="#059951"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toStartOf="@+id/priceinviewTxt"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/priceinviewTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:text="0"
                     android:textAlignment="viewStart"
                     android:textColor="#059951"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toEndOf="@+id/lkrtxt"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ImageView
                 android:id="@+id/foodPic"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                app:srcCompat="@drawable/pizza_2" />
+                app:srcCompat="@color/white"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="4dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -110,6 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:text="Description"
+                android:textAlignment="center"
                 android:textColor="#686767"
                 android:textSize="20sp"
                 android:textStyle="bold" />
