--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -38,7 +38,16 @@
         app:layout_constraintStart_toEndOf="@+id/picCard"
         app:layout_constraintTop_toTopOf="@+id/picCard"
         app:layout_constraintVertical_bias="0.157" />
-
+    <TextView
+        android:id="@+id/fidtxtincart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/txtqtyincart"
         android:layout_width="wrap_content"
