--- a/app/src/main/res/layout/lst_row_food.xml
+++ b/app/src/main/res/layout/lst_row_food.xml
@@ -24,7 +24,7 @@
                 android:layout_height="125dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@color/common_google_signin_btn_tint" />
+                app:srcCompat="@color/white" />
 
             <TextView
                 android:id="@+id/lblFoodID"
